--- a/app/views/skills/edit.html.erb
+++ b/app/views/skills/edit.html.erb
@@ -6,7 +6,7 @@
 
     <div class="col-4">
 
-      <h2>New skill</h2>
+      <h2>Edit skill</h2>
 
       <%= form_for @skill do |f| %>
         <div class="field">
@@ -22,6 +22,11 @@
         <div class="field">
           <%= f.check_box :activate %>
           <%= f.label :activate %>
+        </div>
+
+        <div class="field">
+          <%= f.label :icon, "Upload other picture" %><br />
+          <%= f.file_field :icon %>
         </div>
 
         <div class="actions">
