--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -2,7 +2,14 @@
   <div class="container">
     <h1>Portfolio</h1>
 
+
     <div id="cards_section">
+      <% if user_signed_in? %>
+        <div class="admin-add">
+          <%= link_to 'Add a new project', new_project_path, class: 'admin_alternatives' %>
+        </div>
+      <% end %>
+
       <% @portfolio.each do |project| %>
         <%= render 'portfolio_card', project: project %>
       <% end %>
