--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -21,7 +21,7 @@
 
         <div class="field">
           <%= f.check_box :activate %>
-          <%= f.label :activate %>
+          <%= f.label :activate, default: true %>
         </div>
 
         <div class="field">
