--- a/app/views/pages/_portfolio_card.html.erb
+++ b/app/views/pages/_portfolio_card.html.erb
@@ -1,7 +1,12 @@
-<!-- obsolete / inutilisé -->
+<div>
 <div class="portfolio_card">
-    <%= image_tag(project[:image], class:"screenshot") %>
-    <div class="info">
+  <!-- https://res.cloudinary.com/droxurcle/image/upload/v1588792042/bccn7547v5oldanujh9pdhzqqdkc.jpg -->
+  <% if project.bckgdimage.attached? %>
+    <%= cl_image_tag project.bckgdimage.key, class:"screenshot" %>
+  <% else %>
+    <%= cl_image_tag("ob8vdi2ojyzt5vzqojyicedz9y3g", class:"screenshot") %>
+  <% end %>
+  <div class="info">
     <h1>
       <%= project[:title] %>
     </h1>
@@ -14,6 +19,13 @@
     <%= link_to project[:link], target: 'blank', class: 'button' do %>
     to Website
     <% end %>
-
   </div>
+</div>
+  <% if user_signed_in? %>
+    <div class="admin_options">
+      <%= link_to 'MAJ', edit_project_path(project), class:"admin_alternatives" %>
+      <%= link_to 'X', project_path(project), method: :delete, class:"admin_alternatives" %>
+    </div>
+  <% end %>
+
 </div>
