--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,4 +1,4 @@
-<section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= image_path('banner.jpg') %>)">
+<section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= cl_image_path('w5siapdg7iguyb4agmd6noqg66tg') %>)">
   <div class="container">
     <h1 style="color: #a99c7f">Pierre Garcia<br><span style="color:#FEFDED">
     Développeur Fullstack</span></h1>
