fix the mismatch about icon name between local and remote

--- a/app/views/bios/edit.html.erb
+++ b/app/views/bios/edit.html.erb
@@ -20,13 +20,13 @@
         </div>
 
         <div class="field">
-          <%= f.label :iconLink %><br />
-          <%= f.text_field :iconLink, autofocus: true, size:'30' %>
+          <%= f.label :icon %><br />
+          <%= f.text_field :icon, autofocus: true, size:'30' %>
         </div>
 
         <div class="field">
-          <%= f.label :icon, "Upload background picture" %><br />
-          <%= f.file_field :icon %>
+          <%= f.label :iconCloud, "Upload background picture" %><br />
+          <%= f.file_field :iconCloud %>
         </div>
 
         <div class="actions">
