--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -41,6 +41,7 @@ body {
   width: 100%;
  //min-height: 100vh;
 }
+
 section {
   height: 100vh;
   width: 100%;
@@ -54,6 +55,7 @@ section {
     margin-bottom: 80px;
   }
 }
+
 .container {
   // width: 960px;
   width: 80%;
@@ -69,7 +71,6 @@ section {
   }
 }
 
-
 footer {
   height: auto;
   width: 100%;
@@ -83,6 +84,7 @@ footer {
     }
   }
 }
+
 #banner{
   background-position: center center;
   background-attachment: fixed;
@@ -95,19 +97,20 @@ footer {
     font-weight: 200;
   }
   .button {
-    opacity: 0.7;
-    background-color: none;
-    border: 3px solid $complementaireClaire;
+    opacity: 0.9;
+    background-color: $complementaire;
+    border: 1px solid $complementaire;
     border-radius: 5px;
     padding: 0.5em 1em;
-    color: $complementaireClaire;
+    color: $white;
     margin: 6em 0 8em 0;
+    transition-property: opacity;
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
     &:hover {
-      // transition-duration: 1s;
-      // color: $complementaire;
-      // border: 3px solid $complementaire;
-      transition: 0.7s;
-      opacity: 1.5;
+      background-color: $complementaire;
+      border: 1px solid $complementaire;
+      opacity: 1;
       text-decoration: none;
     }
   }
@@ -128,7 +131,7 @@ footer {
     color: rgba(255, 255, 255, 0.75);
     &:hover {
       color: $white;
-      transition: 1s;
+      transition-duration: 1s;
     }
   }
   .nav-link:before {
@@ -153,11 +156,12 @@ a.admin_alternatives {
     text-decoration: none;
   }
 }
-    .admin_options {
-      margin: 1em 0;
-      display: flex;
-      justify-content: end;
-    }
+
+.admin_options {
+  margin: 1em 0;
+  display: flex;
+  justify-content: end;
+}
 
 #skills {
   background-position: center center;
@@ -284,44 +288,47 @@ a.admin_alternatives {
         border-radius: 15px;
       }
       .info {
-          position: relative;
-          z-index: 3;
-          color: white;
-          opacity: 0;
-          transform: translateY(30px);
-          transition: 0.5s;
-          h1 {
-            color: $complementaire;
-            margin: 0px;
-          }
+        position: relative;
+        z-index: 3;
+        color: white;
+        opacity: 0;
+        transform: translateY(30px);
+        transition: 0.5s;
+        h1 {
+          color: $complementaire;
+          margin: 0px;
+        }
 
-          p {
-            letter-spacing: 1px;
-            font-size: 15px;
-            margin-top: 8px;
-            margin-bottom: 24px;
+        p {
+          letter-spacing: 1px;
+          font-size: 15px;
+          margin-top: 8px;
+          margin-bottom: 24px;
+        }
+        .icons {
+          display: block;
+          float: right;
+          margin-bottom: 16px;
+          img {
+            margin-right: 1em;
           }
-          .icons {
-            display: block;
-            float: right;
-            margin-bottom: 16px;
-            img {
-              margin-right: 1em;
-            }
-          }
-          .button {
-            padding: 0.4rem;
-            outline: none;
-            border-radius: 8px;
-            background: none;
-            border: 2px solid rgba(169, 156, 127,0.7);
-            color: rgba(169, 156, 127,0.7);
-            font-weight: bold;
-            cursor: pointer;
-            transition: 0.4s ease;
-            &:hover {
-            border: 2px solid rgba(212, 206, 191,1);
-            color: rgba(212, 206, 191,1);
+        }
+        .button {
+           opacity: 0.9;
+          background-color: $complementaire;
+          border: 1px solid $complementaire;
+          border-radius: 5px;
+          padding: 0.5em 1em;
+          color: $white;
+          margin: 6em 0 8em 0;
+          transition-property: opacity;
+          transition-duration: 0.5s;
+          transition-delay: 0.2s;
+
+          &:hover {
+            background-color: $complementaire;
+            border: 1px solid $complementaire;
+            opacity: 1;
             text-decoration: none;
           }
         }
