adapt after uploading remote pg db

--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -5,7 +5,7 @@
         Développeur Fullstack
       </span>
     </h1>
-    <p>Développeur Junior familier du code depuis l'adolescence, je souhaite est intégrer une équipe à taille humaine, qui me permette d'évoluer en Back et Front, apporter mes connaissances, et consolider mes bonnes pratiques.</p>
+    <p>Développeur Junior familier du code depuis l'adolescence, je souhaite intégrer une équipe à taille humaine, qui me permette d'évoluer en Back et Front, apporter mes connaissances, et consolider mes bonnes pratiques.</p>
     <% if !user_signed_in? %>
       <a class="button" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
     <% end %>
