--- a/app/assets/stylesheets/source/_banner.scss
+++ b/app/assets/stylesheets/source/_banner.scss
@@ -3,8 +3,17 @@
   background-attachment: fixed;
   background-size: cover;
   color: var(--white);
+  .img_vignette {
+    background-image: url("https://res.cloudinary.com/droxurcle/image/upload/ar_1:1,bo_0px_solid_rgb:ffffff,c_fill,co_rgb:b43131,g_face:auto,h_80,o_100,r_max,w_80/v1609713744/portfolio/img_2858_1024_NB_oatvzx.jpg");
+    float: left;
+    width: 80px;
+    height: 80px;
+    //border: 2px solid white;
+    border-radius: 50%;
+    margin-right: 1em;
+  }
   h1 {
-
+    color: var(--complementaire);
   }
   p {
     font-weight: 200;
