--- a/app/views/pages/_dev_project_card.html.erb
+++ b/app/views/pages/_dev_project_card.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div class="portfolio_card">
+  <div class="dev_project_card">
     <!-- https://res.cloudinary.com/droxurcle/image/upload/v1588792042/bccn7547v5oldanujh9pdhzqqdkc.jpg -->
     <% if project.bckgdimage.attached? %>
       <%= cl_image_tag project.bckgdimage.key, class:"screenshot" %>
