--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -6,8 +6,8 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Skills<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#portfolio">Portfolio</a>
+      <a class="nav-item nav-link active" href="#skills">Skills<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#dev_projects">Portfolio</a>
       <a class="nav-item nav-link" href="#bio">Bio</a>
       <a class="nav-item nav-link" href="#contact">Contact</a>
       <% if user_signed_in? %>
