--- a/app/views/pages/_project_stripe.html.erb
+++ b/app/views/pages/_project_stripe.html.erb
@@ -1,8 +1,8 @@
-<div class="portfolio_card">
+<div class="dev_project_card">
   <div>
     <%= image_tag(link, width: '100%') %>
  </div>
-  <div class="portfolio_card_infos">
+  <div class="dev_project_card_infos">
     <h4><%= title %></h4>
     <p><%= content %></p>
   </div>
