--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <%= render 'banner' %>
     <%= render 'nav' %>
     <%= render 'skills' %>
-    <%= render 'portfolio' %>
+    <%= render 'dev_projects' %>
     <%= render 'bio' %>
     <%#= render 'contact' %>
     <%= render 'footer' %>
