--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -105,7 +105,7 @@ a.admin_alternatives {
 
 @media(max-width: 768px) {
   .container{ width: 95%; }
-  .portfolio_card { width: 80%; }
+  .dev_project_card { width: 80%; }
 }
 #contact{
   background-color: var(--complementaire-claire);
