--- a/app/assets/stylesheets/source/_projects.scss
+++ b/app/assets/stylesheets/source/_projects.scss
@@ -18,12 +18,15 @@
     .dev_project_card {
       width: 510px;
       height: 340px;
+      //width: 100%;
+      //height: auto;
+      flex-direction: row;
+      display: flex;
+      align-items: end;
       border-radius: 15px;
       padding: 1.5rem;
       background: white;
       position: relative;
-      display: flex;
-      align-items: flex-end;
       transition: 0.4s ease-out;
       box-shadow: 0px 7px 10px rgba(black, 0.5);
       &:hover {
@@ -32,8 +35,17 @@
           opacity: 1;
         }
         .info {
+          display: flex;
+          align-items: space-around;
+          flex-direction: column;
           opacity: 1;
           transform: translateY(0px);
+          .info_last_row {
+            height: inherit;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+          }
         }
       }
       &:before {
@@ -53,6 +65,8 @@
       img.screenshot {
         width: 100%;
         height: 100%;
+        //width: 510px;
+        //height: 340px;
         object-fit: cover;
         position: absolute;
         top: 0;
@@ -80,7 +94,7 @@
         .icons {
           display: block;
           float: right;
-          margin-bottom: 16px;
+          // margin-bottom: 16px;
           img {
             margin-right: 1em;
           }
@@ -90,12 +104,13 @@
           background-color: var(--complementaire);
           border: 1px solid var(--complementaire);
           border-radius: 5px;
-          padding: 0.5em 1em;
+          padding: 0.5rem 1rem;
           color: var(--white);
-          margin: 6em 0 8em 0;
+          //margin: 6em 0 8em 0;
           transition-property: opacity;
           transition-duration: 0.5s;
           transition-delay: 0.2s;
+
 
           &:hover {
             background-color: var(--complementaire);
@@ -106,6 +121,7 @@
         }
       }
     }
+
   }
 }
 
@@ -124,12 +140,24 @@
     grid-column: 2;
   }
 }
+
 @media(max-width: 768px) {
-.card_strip {
-  grid-template-columns: 1fr;
+  img.screenshot {
+    max-width: 100%;
+    height: auto;
   }
-    .dev_project_content {
+  .card_strip {
+    //grid-template-columns: 1fr;
+    grid-template-columns: 100%;
+    }
+  .dev_project_content {
+    max-width: 100%;
+    height: auto;
     grid-column: 1;
+    &:before {
+      max-width: 100%;
+      height: auto;
+    }
   }
 }
 
