--- a/app/assets/stylesheets/source/_projects.scss
+++ b/app/assets/stylesheets/source/_projects.scss
@@ -9,17 +9,14 @@
   #cards_section {
     width: 100%;
     height: inherit;
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(auto-fill, 510px);
-    justify-content: space-around;
-    grid-column-gap: 40px;
-    grid-row-gap: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
     .dev_project_card {
+      margin: 2rem 0;
       width: 510px;
       height: 340px;
-      //width: 100%;
-      //height: auto;
       flex-direction: row;
       display: flex;
       align-items: end;
@@ -63,11 +60,7 @@
         opacity: 0;
       }
       img.screenshot {
-        width: 100%;
-        height: 100%;
-        //width: 510px;
-        //height: 340px;
-        object-fit: cover;
+        object-fit: fill;
         position: absolute;
         top: 0;
         left: 0;
@@ -142,23 +135,33 @@
 }
 
 @media(max-width: 768px) {
-  img.screenshot {
+  .dev_project_card {
     max-width: 100%;
     height: auto;
-  }
-  .card_strip {
-    //grid-template-columns: 1fr;
-    grid-template-columns: 100%;
-    }
-  .dev_project_content {
-    max-width: 100%;
-    height: auto;
-    grid-column: 1;
-    &:before {
-      max-width: 100%;
-      height: auto;
-    }
   }
 }
+
+
+
+
+// @media(max-width: 768px) {
+//   img.screenshot {
+//     max-width: 100%;
+//     height: auto;
+//   }
+//   .card_strip {
+//     //grid-template-columns: 1fr;
+//     grid-template-columns: 100%;
+//     }
+//   .dev_project_content {
+//     max-width: 100%;
+//     height: auto;
+//     grid-column: 1;
+//     &:before {
+//       max-width: 100%;
+//       height: auto;
+//     }
+//   }
+// }
 
 
