--- a/app/views/pages/_dev_project_card.html.erb
+++ b/app/views/pages/_dev_project_card.html.erb
@@ -1,8 +1,8 @@
-<div>
+<!--<div>-->
   <div class="dev_project_card">
     <!-- https://res.cloudinary.com/droxurcle/image/upload/v1588792042/bccn7547v5oldanujh9pdhzqqdkc.jpg -->
     <% if project.bckgdimage.attached? %>
-      <%= cl_image_tag project.bckgdimage.key, class:"screenshot", width: 510, height: 340 %>
+      <%= cl_image_tag project.bckgdimage.key, class:"screenshot", width: '100%', height: '100%' %> <!--width: 510, height: 340 %>-->
     <% else %>
       <%= cl_image_tag("ob8vdi2ojyzt5vzqojyicedz9y3g", class:"screenshot") %>
     <% end %>
@@ -37,4 +37,4 @@
     </div>
   <% end %>
 
-</div>
+<!--</div>-->
