responsive mode for banner headline and skills

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -64,6 +64,7 @@ section {
 }
 @media (max-width: 768px) {
   .container {
+  //padding-top: 4em; Make it work !
   width: 95%;
   margin: 0 auto;
   }
